Cards to visualize existing data

--- a/index.html
+++ b/index.html
@@ -9,7 +9,23 @@
 </head>
 
 <body>
-  <!-- Start here -->
+  <!-- Library shelf with all books -->
+  <div class="library-shelf">
+    <div class="library-book">
+      <!-- First manually printed book -->
+      <p class="library-book-title">Title: Meditations</p>
+      <p class="library-book-author">Author: Marcus Aurelius</p>
+      <p class="library-book-pages">Pages: 231</p>
+      <p class="library-book-status">Status: Read</p>
+    </div>
+    <!-- Second book using JavaScript -->
+    <div class="library-book">
+      <p class="library-book-title">Title: The Handbook</p>
+      <p class="library-book-author">Author: Epictetus</p>
+      <p class="library-book-pages">Pages: 123</p>
+      <p class="library-book-status">Status: Read</p>
+    </div>
+  </div>
   <script src="script.js"></script>
 </body>
 
