Books added via JavaScript, removed hard-coded HTML elements

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <!-- Library shelf with all books -->
   <div class="library-shelf">
+    <!-- Books added via JavaScript -->
   </div>
   <!-- Add book interaction buton -->
   <div class="add-book">
