--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <label for="bookAuthor">Author</label>
         <input id="bookAuthor" name="bookAuthor" type="text">
         <label for="bookPages">Pages</label>
-        <input id="bookPages" name="bookPages" type="number">
+        <input id="bookPages" name="bookPages" type="number" min="1" max="9999">
         <label for="bookStatus">Read</label>
         <input id="bookStatus" name="bookStatus" type="checkbox">
       <div class="addBookButtons">
