--- a/index.html
+++ b/index.html
@@ -22,17 +22,26 @@
     <form class="addBookForm">
       <!-- Book information fields -->
       <div class="addBookFields">
-        <label for="bookTitle">Title</label>
-        <input id="bookTitle" name="bookTitle" type="text">
-        <label for="bookAuthor">Author</label>
-        <input id="bookAuthor" name="bookAuthor" type="text">
-        <label for="bookPages">Pages</label>
-        <input id="bookPages" name="bookPages" type="number" min="1" max="9999">
-        <label for="bookStatus">Read</label>
-        <input id="bookStatus" name="bookStatus" type="checkbox">
-      <div class="addBookButtons">
-        <button class="blackBtn" value="cancel" formmethod="dialog">Cancel</button>
-        <button class="blackBtn" id="confirmBtn" value="default">Confirm</button>
+        <div class="bookTitleField">
+          <label for="bookTitle">Title</label>
+          <input id="bookTitle" name="bookTitle" type="text">
+        </div>
+        <div class="bookAuthorField">
+          <label for="bookAuthor">Author</label>
+          <input id="bookAuthor" name="bookAuthor" type="text">
+        </div>
+        <div class="bookPagesField">
+          <label for="bookPages">Pages</label>
+          <input id="bookPages" name="bookPages" type="number" min="1" max="9999">
+        </div>
+        <div class="bookStatusField">
+          <label for="bookStatus">Read</label>
+          <input id="bookStatus" name="bookStatus" type="checkbox">
+        </div>
+        <div class="addBookButtonsField">
+          <button class="blackBtn" value="cancel" formmethod="dialog">Cancel</button>
+          <button class="blackBtn" id="confirmBtn" value="default">Confirm</button>
+        </div>
       </div>
     </form>
   </dialog>
