Checkbox minimum size

--- a/index.html
+++ b/index.html
@@ -36,13 +36,12 @@
         </div>
         <div class="bookStatusField">
           <label for="bookStatus">Read</label>
-          <input id="bookStatus" name="bookStatus" type="checkbox">
+          <input id="bookStatus" name="bookStatus" type="checkbox" value="read-status">
         </div>
         <div class="addBookButtonsField">
           <button class="blackBtn" value="cancel" formmethod="dialog">Cancel</button>
           <button class="blackBtn" id="confirmBtn" value="default">Confirm</button>
         </div>
-      </div>
     </form>
   </dialog>
   <p>
