Modal and button fixed temporary sizes

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
           <input id="bookStatus" name="bookStatus" type="checkbox" value="read-status">
         </div>
         <div class="addBookButtonsField">
-          <button class="blackBtn" value="cancel" formmethod="dialog">Cancel</button>
-          <button class="blackBtn" id="confirmBtn" value="default">Confirm</button>
+          <button class="modalBtn" id="cancelBtn" value="cancel" formmethod="dialog">Cancel</button>
+          <button class="modalBtn" id="confirmBtn" value="default">Confirm</button>
         </div>
     </form>
   </dialog>
