--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <input id="bookPages" name="bookPages" type="number" min="1" max="9999">
         </div>
         <div class="bookStatusField">
-          <label for="bookStatus">Read</label>
+          <label for="bookStatus">Have you already read the book?</label>
           <input id="bookStatus" name="bookStatus" type="checkbox" value="read-status">
         </div>
         <div class="addBookButtonsField">
