Modal label and inputs sizes and positioning

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
           <input id="bookPages" name="bookPages" type="number" min="1" max="9999">
         </div>
         <div class="bookStatusField">
-          <label for="bookStatus">Have you already read the book?</label>
           <input id="bookStatus" name="bookStatus" type="checkbox" value="read-status">
+          <label for="bookStatus">Already read the book?</label>
         </div>
         <div class="addBookButtonsField">
           <button class="modalBtn" id="cancelBtn" value="cancel" formmethod="dialog">Cancel</button>
