Remove id in order to use the semanthic element

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
           <label for="bookStatus">Already read the book?</label>
         </div>
         <div class="add-book-btns-field">
-          <button class="modal-btn" id="cancelBtn" value="cancel" formmethod="dialog">Cancel</button>
-          <button class="modal-btn" id="confirmBtn" value="default">Confirm</button>
+          <button class="cancel-btn" id="cancelBtn" value="cancel" formmethod="dialog">Cancel</button>
+          <button class="confirm-btn" id="confirmBtn" value="default">Confirm</button>
         </div>
     </form>
   </dialog>
