--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </form>
   </dialog>
   <p>
-    <button id="showDialog">Show the dialog</button>
+    <button class="show-dialog-btn" id="showDialog">Show the dialog</button>
   </p>
   <output></output>
   <script src="script.js"></script>
