Page content id wrap to prevent pseudo interactions

--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 </head>
 
 <body>
-  <!-- Library shelf with all books -->
-  <div class="library-shelf">
-    <!-- Books added via JavaScript -->
-  </div>
-  <!-- Add book interaction buton -->
-  <div class="add-book">
-    <button class="add-book-btn">Add Book</button>
+  <div id="pageContent">
+    <!-- Library shelf with all books -->
+    <div class="library-shelf">
+      <!-- Books added via JavaScript -->
+    </div>
+    <!-- Add book interaction buton -->
+    <div class="add-book">
+      <button class="add-book-btn">Add Book</button>
+    </div>
   </div>
   <!-- A modal dialog containing a form -->
   <dialog class="add-book-dialog" id="favDialog">
