Unique ID for the modal interaction buttons

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <!-- Add book interaction buton -->
     <div class="add-book">
-      <button class="add-book-btn">Add Book</button>
+      <button class="add-book-btn" id="addBookBtn">Add Book</button>
     </div>
   </div>
   <!-- A modal dialog containing a form -->
@@ -52,7 +52,7 @@
     </form>
   </dialog>
   <p>
-    <button class="show-dialog-btn" id="showDialog">Show the dialog</button>
+    <button class="show-dialog-btn" id="showDialogBtn">Show the dialog</button>
   </p>
   <output></output>
   <script src="script.js"></script>
