New div to help create the page background and center book cards

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 <body>
   <div id="pageContent">
     <!-- Library shelf with all books -->
-    <div class="library-shelf">
-      <!-- Books added via JavaScript -->
-    </div>
+     <div class="page-background">
+      <div class="library-shelf">
+        <!-- Books added via JavaScript -->
+      </div>
+     </div>
     <!-- Add book interaction buton -->
     <div class="add-book">
       <button class="add-book-btn" id="addBookBtn">Add Book</button>
