Reminder to add a plus (+) icon

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
      </div>
     <!-- Add book interaction buton -->
     <div class="add-book">
+      <!-- TODO: Add a "plus" (+) icon -->
       <button class="add-book-btn" id="addBookBtn">Add Book</button>
     </div>
   </div>
