Add Book symbolic icon for it's button

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Add book interaction buton -->
     <div class="add-book">
       <!-- TODO: Add a "plus" (+) icon -->
-      <button class="add-book-btn" id="addBookBtn">Add Book</button>
+      <button class="add-book-btn" id="addBookBtn"><img src="./images/plus-circle.png" class="add-book-icon">Add Book</button>
     </div>
   </div>
   <!-- A modal dialog containing a form -->
