Header and footer sections

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+  <!-- Header section -->
+  <header class="header">ODIN PERSONAL LIBRARY</header>
   <div id="pageContent">
     <!-- Library shelf with all books -->
      <div class="page-background">
@@ -53,6 +55,10 @@
         </div>
     </form>
   </dialog>
+    <!-- Footer section -->
+    <footer class="footer">
+      <h1>Copyright @ 2025 <a href="https://github.com/Krauzer94/odin-library" target="_blank">Krauzer94</a></h1>
+  </footer>
   <script src="script.js"></script>
 </body>
 
