Footer hyperlink styling

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   </dialog>
     <!-- Footer section -->
     <footer class="footer">
-      <h1>Copyright @ 2025 <a href="https://github.com/Krauzer94/odin-library" target="_blank">Krauzer94</a></h1>
+      <h1>Copyright © 2025 | <a href="https://github.com/Krauzer94/odin-library" target="_blank">Krauzer94</a></h1>
   </footer>
   <script src="script.js"></script>
 </body>
