Header logo image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <!-- Header section -->
-  <header class="header">ODIN PERSONAL LIBRARY</header>
+  <header class="header"><img src="./images/odin-lined.png" class="header-icon">ODIN PERSONAL LIBRARY</header>
   <div id="pageContent">
     <!-- Library shelf with all books -->
      <div class="page-background">
